--- a/style.css
+++ b/style.css
@@ -43,17 +43,18 @@ h1 {
     text-align: left;
     font-family: avenir;
     font-size: 60px;
-    padding-left: 218px;
+    padding-left: 220px;
     padding-top: 150px;
     color: white;
 }
 
-h2 {
-    text-align: center;
+.whoiam {
+    text-align: left;
     font-family: avenir;
     font-size: 30px;
-    padding-top: 10px;
+    width: 3000px;
     color: white;
+    padding-left: 225px;
 }
 
 h3 {
@@ -61,7 +62,7 @@ h3 {
     font-family: avenir;
     font-size: 20px;
     padding-top: 20px;
-    padding-right: 230px;
+    padding-right: 280px;
     color: white;
 }
 
@@ -86,6 +87,9 @@ p {
     font-size: 15px;
     color: white;
     text-align: center;
+    width: 400px;
+    padding-top: 30px;
+    line-height: 1.6;
 }
 
 .grid-container {
@@ -103,18 +107,108 @@ p {
   margin-bottom: 100px;
 }
 
-.solid {
+.Firstdiv {
     color: white;
     height: 0.5px;
     width: 800px;
 }
 
-.TextBox {
-    margin-left: 35px;
-    margin-right: 35px;
-    display: inline-block;
-    padding: 100px;
-    font-size: 15px;
+h5 {
+    text-align: center;
     font-family: avenir;
+    font-size: 60px;
     color: white;
+}
+
+.aboutMyself {
+    text-align: left;
+    font-family: avenir;
+    font-size: 30px;
+    color: white;
+    padding-left: 218px;
+}
+
+.firstParagraph {
+    text-align: left;
+    font-family: avenir;
+    font-size: 16px;
+    color: white;
+    padding-left: 220px;
+    width: 500px;
+    line-height: 1.6;
+}
+
+.whatcanido {
+    text-align: left;
+    font-family: avenir;
+    font-size: 30px;
+    color: white;
+    padding-left: 100px;
+}
+
+.secondParagraph {
+    text-align: left;
+    font-family: avenir;
+    font-size: 16px;
+    color: white;
+    padding-left: 100px;
+    width: 420px;
+    line-height: 1.6;
+}
+
+.thirdParagraph {
+    text-align: left;
+    font-family: avenir;
+    font-size: 16px;
+    color: white;
+    padding-left: 220px;
+    width: 500px;
+    padding-bottom: 100px;
+    line-height: 1.6;
+}
+
+.Seconddiv {
+    color: white;
+    height: 0.5px;
+    width: 800px;
+}
+
+.myInterests {
+    text-align: left;
+    font-family: avenir;
+    font-size: 30px;
+    color: white;
+    padding-left: 218px;
+}
+
+.contact {
+    text-align: center;
+    line-height: 2;
+}
+
+.socials {
+    text-align: center;
+    line-height: 2;
+}
+
+#Text {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    color: white;
+    font-family: avenir;
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+.secondsection {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 218px;
+}
+
+.Me {
+    padding-top: 80px;
 }
